# FourthandStats

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: app_config.yaml  data_sources.yaml  metric_definitions.yaml  rating_weights.yaml
data/manifests/: build_manifest.json  data_manifest.json
docs/: architecture.md  data_sources.md  metric_definitions.md  rating_methodology.md  roadmap.md  simulation_methodology.md
saved_views/examples/: player_matrix_default.json  team_matrix_default.json
scripts/: export_demo_data.py  rebuild_all.py  rebuild_metrics.py  update_data.py  validate_data.py
src/fourthandstats/: __init__.py
src/fourthandstats/data/: download.py  manifest.py  quality.py  schema.py  transform.py
src/fourthandstats/data/sources/: nflverse_source.py  source_registry.py
src/fourthandstats/metrics/: identity.py  percentiles.py  player_metrics.py  ratings.py  team_metrics.py
src/fourthandstats/queries/: compare_queries.py  play_queries.py  player_queries.py  team_queries.py
src/fourthandstats/simulations/: README.md  __init__.py  matchup_sim.py  season_sim.py
src/fourthandstats/ui/: home.py  team_matrix.py
src/fourthandstats/utils/: logging.py  paths.py  time.py
tests/: conftest.py  test_data_quality.py  test_metrics.py  test_queries.py
